--- a/PocoMobileProjects/app/build.gradle
+++ b/PocoMobileProjects/app/build.gradle
@@ -16,8 +16,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                //arguments "-DANDROID_STL=c++_static", "-DANDROID_TOOLCHAIN=clang++"
-                //cppFlags "-std=c++14"
+                arguments "-DANDROID_STL=c++_static", "-DANDROID_TOOLCHAIN=clang++"
                 cppFlags ""
             }
         }
